# projet-sc-william-bastien

./: .coverage  README.md  example.json  pyproject.toml  test.ipynb
src/projet_sc/: __init__.py
src/supplychain_lots/: cli.py  core.py
tests/: test_core.py
