[project]
name = "projet-sc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Bastien Barthélémy", email = "email@exemple.com" }
]
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "pulp>=3.3.0",
]

[project.scripts]
projet-sc = "projet_sc:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
