[project]
name = "supplychain-lots"
version = "0.1.0"
description = "Librairie Python pour résoudre des problèmes d'achat de lots fractionnables en programmation linéaire"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pulp>=2.7"]

[project.optional-dependencies]
dev = ["ruff", "mypy", "pytest", "pytest-cov"]

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["supplychain_lots"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.py"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true