[project]
name = "supplychain-lots"
version = "0.1.0"
description = "Librairie pour résoudre des problèmes d'achat de lots fractionnables en programmation linéaire"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pulp>=2.7",
                "numpy>=1.21"]

[project.optional-dependencies]
dev = ["ruff", "mypy", "pytest", "pytest-cov"]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["supplychain_lots"]
package-dir = {"" = "src"}

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "W", "C4", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
disallow_untyped_defs = true
warn_unused_ignores = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=supplychain_lots --cov-report=term-missing"
testpaths = ["tests"]